--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,5 +8,7 @@ pages:
     stage: deploy
     script: ./generate.sh
     artifacts:
-        paths: public
-        only: master
+        paths:
+            - public
+    only:
+        - master
