ci - generate server-side
Revert decision from '1e20114 ci - generate locally'.
Local generation is easier to debug and faster to
deploy, but versioned files are duplicated and the
repository is harder to maintain.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,10 @@
+image: archlinux/base
+
 pages:
     stage: deploy
     script:
-        - echo ''
+        - pacman --noconfirm -Sy pandoc sassc python-setuptools yq
+        - ./generate.sh
     artifacts:
         paths:
             - public
